[package]
name = "resolver-test"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
a = []
b = []

[dev-dependencies]
test-macros = { path = "test-macros" }
test-setup = { path = "test-setup" }